@@ -36,7 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2008-02-13 DP  1.8.3  Sort the functions in the combo box on the Trigger 
+2008-02-18 DP  1.8.3  Correctly generate table DDL when inherited columns 
+                      follow the last 'real' column, per Peter Gagarinov.
+2008-02-13 DP  1.8.3  Sort the functions in the combo box on the Trigger
                       dialogue [Robins Tharakan]
 2008-02-13 DP  1.8.3  Hide array variants of table-types in datatype selectors
                       where we already hide the table type itself.
